feat: Rename project and update game theme
Refactors the project to rename it from "Click2Mine – The Gold Rush" to "Battle Legends: Nexus Siege". This includes updating the project name in `package.json`, `index.html`, and `metadata.json`.

Additionally, visual elements and type definitions are updated to reflect the new MOBA theme:
- Font families and background styles in `index.html` are changed.
- Rank types and player attributes (e.g., gems to diamonds, equipment to ownedHeroes/skins, emblems) in `types.ts` and `constants.ts` are modified.
- The login screen's branding and UI elements are updated.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "click2mine-–-the-gold-rush",
+  "name": "battle-legends:-nexus-siege",
   "private": true,
   "version": "0.0.0",
   "type": "module",
