feat: Rename project and update game theme
Update project name, metadata, and UI elements to reflect the new game title "Battle Royale: Survival Grounds". This includes changes to package.json, index.html, and metadata.json.

Additionally, refactor types and constants to align with a battle royale game genre, including changes to rank names, player owned assets, and initial player state. The game's visual theme is also subtly adjusted with new background gradients and pulse animation colors.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "battle-legends:-nexus-siege",
+  "name": "battle-royale:-survival-grounds",
   "private": true,
   "version": "0.0.0",
   "type": "module",
