feat: Rename project and update branding
Update project name, title, and metadata to reflect the eFootball Mobile 25 branding. Adjust UI elements and styles to match the new theme, including color palettes and animation keyframes.

The initial player state and constants have also been updated to align with the new game's mechanics and features, such as replacing ranks with divisions and introducing new default player data.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "battle-royale:-survival-grounds",
+  "name": "efootball-mobile-25",
   "private": true,
   "version": "0.0.0",
   "type": "module",
